--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ notifications:
     - begona.aramburu@gmail.com
 script:
 - mvn org.jacoco:jacoco-maven-plugin:prepare-agent verify
+before_install:
+  - chmod +x mvnw
