--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,15 @@ notifications:
     - begona.aramburu@gmail.com
 script:
 - mvn org.jacoco:jacoco-maven-plugin:prepare-agent verify
+# - mvn sonar:sonar -Dsonar.host.url=http://sonarcloud.io -Dsonar.organization=xx -Dsonar.login=$SONAR
 before_install:
   - chmod +x mvnw
+addons:
+  sonarcloud:
+    organization: "begonaaramburu"
+    token:
+      secure: "**************************" # encrypted value of your token
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
