--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.data.mongodb.database=test
+spring.data.mongodb.database=webSoc
 spring.data.mongodb.host=localhost
 spring.data.mongodb=27017
+
+
