change properties sonar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.data.mongodb.database=webSoc
 spring.data.mongodb.host=localhost
 spring.data.mongodb=27017
 
+sonar.surefire.reportsPath=target/surefire-reports
+sonar.jacoco.reportPath=target/jacoco.exec
+sonar.binaries=target/classes
+
 
